--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diagrama: Los 8 Científicos que Inventaron la IA Generativa</title>
+    <title>2502_ISSC712_MD_A3P3_GarciaRodriguezBrisaAlessandra</title>
     <style>
         * {
             margin: 0;
@@ -779,3 +779,4 @@
     </div>
 </body>
 </html>
+
